@@ -1,8 +1,14 @@
+BOARD18 2.5.1 Release Notes
+ 
+Changes from 2.5.0 Release:
+Implemented Issue 82 -  Make "remember me" flag persistent.
+Also updated the text on the login page. 
+
 BOARD18 2.5.0 Release Notes
 
 Changes from 2.4.7 Release:
 Implemented fix for Issue 76 - Expanded email column in the players table.
-Implemented Issue 86 - Implemented "Remember Me" logic in "Login" pages.
+Implemented Issue 81 - Implemented "Remember Me" logic in "Login" pages.
   Upgraders take note: The above changes required some database changes.
   See http://wiki.board18.org/w/Release_2.5.0_Upgrade_Note for more info.
 Removed some obsolete utilities and updated the README. txt file in the
